--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -21,7 +21,7 @@
           {{ b.title }}
         </div>
         <div class="book--content">
-          <div class="book--content--cover">
+          <div class="book--content--cover" role="figure">
             <img src="{{ b.coverUrl }}" />
           </div>
           <div class="book--content--info">
